--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
 }
 
 body{
-    background-color: #efefef;
+    background-color: #000000;
 }
 
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #3b5998;
+    background-color: #363636;
     padding: 5px 5%;
 }
 
@@ -30,13 +30,13 @@ nav{
     align-items: center;
 }
 
-.nav-left ul li{
+.nav-right ul li{
     list-style-type: none;
     display: inline-block;
 }
-.nav-left ul li img{
+.nav-right ul li img{
     width: 28px;
-    margin: 0 15px;
+    margin: 0 5px;
 }
 
 .icone-usuario img{
@@ -48,15 +48,16 @@ nav{
 }
 
 .busca{
-    background: #efefef;
-    width: 350px;
+    background: #000000;
+    width: 1200px;
+    height: 40px;
     border-radius: 20px;
     display: flex;
     align-items: center;
     padding: 0 15px;
+    
+    
 }
-
-
 
 .busca input{
     width: 100%;
@@ -79,4 +80,49 @@ nav{
     position: absolute;
     top: 0;
     right: 0;
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 5%;
+}
+
+.left-sidebar{
+    
+    flex-basis: 25%;
+    position: sticky;
+    top: 70%;
+    align-self: flex-start;
+    height: 100vh;
+}
+
+.right-sidebar{
+    flex-basis: 25%;
+    position: sticky;
+    top: 70%;
+    align-self: flex-start;
+    
+}
+
+.main-content{
+    flex-basis: 47%;
+
+}
+
+.links a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    font-size: 1.3em;
+    color: #A7A6A6;
+    margin-top: 50px;
+    border-radius: 8px;
+}
+
+.links a img{
+    width: 30px;
+    margin-right: 15px;
+   
 }
