--- a/style.css
+++ b/style.css
@@ -7,122 +7,91 @@
 }
 
 body{
-    background-color: #000000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-nav{
+header{
+    position: relative;
+    width: 100%;
+    height: 70px;
+    background: black;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #363636;
-    padding: 5px 5%;
-}
 
+}
 .logo{
-    width: 160px;
-    margin-right: 45px;
-    color: white;
-    font-size: 2em;
-}
-
-.nav-left, .nav-right{
     display: flex;
     align-items: center;
+    height: 100%;
+    padding: 4%;
+    justify-content: space-evenly;
+    width: 20%;
+   
 }
 
-.nav-right ul li{
-    list-style-type: none;
-    display: inline-block;
-}
-.nav-right ul li img{
-    width: 28px;
-    margin: 0 5px;
-}
+.navbar{
+    position: relative;
+    width: 70%;
+    padding: 5%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-.icone-usuario img{
-    width: 40px;
-    cursor: pointer;
-}
-.icone-usuario{
-    margin-left: 30px;
 }
 
 .busca{
-    background: #000000;
-    width: 1200px;
-    height: 40px;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-    
-    
-}
-
-.busca input{
-    width: 100%;
-    background: transparent;
-    padding: 10px;
-    outline: none;
-    border: none;
-}
-.online{
     position: relative;
-}
-
-.online::after{
-    content: '';
-    width: 7px;
-    height: 7px;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    background: #41db51;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.container{
-    display: flex;
-    justify-content: space-between;
-    padding: 13px 5%;
-}
-
-.left-sidebar{
-    
-    flex-basis: 25%;
-    position: sticky;
-    top: 70%;
-    align-self: flex-start;
-    height: 100vh;
-}
-
-.right-sidebar{
-    flex-basis: 25%;
-    position: sticky;
-    top: 70%;
-    align-self: flex-start;
+    width: 40%;
     
 }
-
-.main-content{
-    flex-basis: 47%;
-
-}
-
-.links a{
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
-    font-size: 1.3em;
-    color: #A7A6A6;
-    margin-top: 50px;
+.busca input{
+    width: 80%;
+    height: 35px;
+    border: none;
     border-radius: 8px;
+    padding: 1%;
+    text-indent: 10px;
+    font-size: 18px;
 }
 
-.links a img{
-    width: 30px;
-    margin-right: 15px;
-   
+#buscaIcon{
+    position: relative;
+    left: -33px;
+    bottom: -5px;
+    z-index: 221;
+    font-size: 22px;
+    cursor: pointer;
+    color: rgb(77,77,77);
+    
+}
+
+ul {
+    width: 60%;
+}
+
+ul li{
+    display: inline-block;
+    margin-left: 4%;
+}
+
+ul li i{
+    color: white;
+}
+
+ul li a:hover{
+    background: white;
+    color: black;
+    border-radius: 5px;
+    
+    
+}
+
+ul li a{
+    color: white;
+    text-decoration: none;
+    font-size: 24px;
+    padding: 1%;
 }
