--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ ul li a{
     color: white;
     text-decoration: none;
     font-size: 20px;
-    padding: auto;
+    padding: 2px;
 
 }
 
@@ -186,5 +186,77 @@ ul li a{
     .main{
         transition: margin 0.4s;
         margin-left: 78px;
+    }
+}
+
+.button-mobile{
+    display: none;
+    align-self: flex-start;
+    align-items: center;
+    margin: 16px;
+    background: transparent;
+    color: white;
+    border: 0;
+}
+.button-mobile span{
+    font-size: 22px;
+    margin-left: 8px;
+}
+.button-close span i{
+    font-size: 42px;
+
+}
+
+.menu-mobile{
+    display: none;
+}
+
+.menu-mobile-active{
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    z-index: 99;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.menu-mobile-active button{
+    background: transparent;
+    border: 0;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.menu-mobile-active button > span{
+    display: inline-flex;
+    align-items: center;
+}
+
+.mobile-text{
+    font-size: 22px;
+    margin-left: 8px;
+}
+
+@media (max-width: 520px){
+    .sidebar{
+        display: none;
+    }
+    .button-mobile{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+    ul li a{
+        display: none;
+        
+    }
+    .main{
+        margin-left: 6px;
     }
 }
