--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0px;
     padding: 0px;
     font-family: 'poppins', sans-serif;
+    
 }
 
 body{
@@ -159,13 +160,6 @@ ul li a{
     width: 100%;
 }
 
-.main{
-    margin: auto;
-    text-align: center;
-    overflow: hidden;
-    margin-top: 20px;
-}
-
 @media (width < 920px){
     header div > h1{
         opacity: 0;
@@ -240,6 +234,70 @@ ul li a{
     font-size: 22px;
     margin-left: 8px;
 }
+
+
+main{
+    margin: auto;
+    text-align: center;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+.post {
+    width: 40%;
+    background-color: #fff;
+    border-radius: 6px;
+    padding: 20px;
+    color: black;
+    margin: 0 auto; /* Isso centraliza o elemento horizontalmente */
+}
+.user-profile img{
+    width: 45px;
+    margin-right: 10px;
+}
+
+.user-profile {
+    display: flex;
+    align-items: center;
+}
+
+.user-profile p {
+    margin-bottom: -5px;
+    
+}
+
+.user-profile small{
+    font-size: 12px;
+    margin-left: -32px;
+}
+
+.post-txt{
+    padding-left: 55px;
+    padding-top: 20px;
+}
+
+.post-txt textarea{
+    width: 100%;
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid #ccc;
+    background: transparent;
+    resize: none;
+}
+
+.add-links a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: black;
+    font-size: 13px;
+}
+
+.add-links a span{
+    width: 20px;
+
+}
+
 
 @media (max-width: 520px){
     .sidebar{
