--- a/style.css
+++ b/style.css
@@ -205,6 +205,13 @@ ul li a{
     display: none;
 }
 
+#menu-mobile a {
+    text-decoration: none ;
+    color: white;
+    font-size: 2rem;
+    margin-top: 2vh;
+}
+
 .menu-mobile-active{
     width: 100%;
     height: 100vh;
@@ -214,7 +221,7 @@ ul li a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding-top: 2vh;
     overflow: hidden;
 }
 
