--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ ul li a{
 #menu-mobile a {
     text-decoration: none ;
     color: white;
-    font-size: 2rem;
+    font-size: 1.9em;
     margin-top: 2vh;
 }
 
