--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ ul li a{
 }
 
 .sidebar a span{
-    font-size: 16px;
+    font-size: 22px;
 }
 
 .sidebar > nav{
@@ -236,6 +236,11 @@ main{
     text-align: center;
     overflow: hidden;
     margin-top: 20px;
+}
+
+main h1{
+    color: white;
+    padding-bottom: 20px;
 }
 
 .post {
