--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -4,9 +4,9 @@
 /* Media queries para adaptação portátil*/
 /* Para dispositivos moveis */
 
-@media (max-width: 767px){
+@media  (max-width: 767px){
 
-    header div > a  h1{
+    header div >  h1{
         opacity: 0;
         visibility: hidden;
     }
@@ -26,11 +26,22 @@
     .main{
         margin-left: 6px;
     }
+
+    .add-links input[type="button"]{
+        transition: all 0.3s;
+
+        margin-left: 40%;
+
+    }
+    .post-txt p{
+        font-size:14px;
+        transition: all 0.2s;
+    }
 }
 
 
 /*Para dispositivos tablet */
-@media (min-width: 768px) and (max-width: 1023px){
+@media (min-width: 767px) and (max-width: 1023px){
    
     .sidebar{
         width: 72px;
@@ -47,5 +58,17 @@
     .main{
         transition: margin 0.4s;
         margin-left: 78px;
+    }
+    .add-links input[type="button"]{
+        transition: all 0.3s;
+        margin-left: 60%;
+    }
+}
+
+@media (min-width: 1022px) and (max-width: 1200px){
+
+    .add-links input[type="button"]{
+        transition: all 0.3s;
+        margin-left: 75%;
     }
 }
