--- a/css/login.css
+++ b/css/login.css
@@ -12,7 +12,7 @@ body * {
 .main-login {
     width: 100vw;
     height: 100vh;
-    background: #201b2c;
+    background:  #1B1C19;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,11 +28,12 @@ body * {
 }
 
 .left-login > h1{
-    color: #00ff88;
+    color: #fff;
+    font-size: 3em;
 }
 
 .left-login > h2{
-    color: white;
+    color: #ffffff7e;
 }
 
 .right-login{
@@ -50,14 +51,14 @@ body * {
     align-items: center;
     flex-direction: column;
     padding: 30px 35px;
-    background: #2f2841;
+    background: #0F1313;
     border-radius: 20px;
     box-shadow: 0px 10px 40px #00000056;
     
 }
 
 .card-login > h1 {
-    color: #00ff88;
+    color: #fff;
     font-weight: 800;
     margin: 0;
 }
@@ -85,7 +86,7 @@ body * {
     border: none;
     border-radius: 10px;
     padding: 15px;
-    background: #514869;
+    background: #1B1C19;
     color: white;
     font-size: 12pt;    
     box-shadow: 0px 10px 40px #00000056;
@@ -113,9 +114,9 @@ body * {
     font-weight: 800;
     letter-spacing: 3px;
     color: #2b134b;
-    background: #00ff88;
+    background: #fff;
     cursor: pointer;
-    box-shadow: 0px 10px 40px -12px #00ff8052;
+    box-shadow: 0px 10px 40px -12px #ffffff7c;
 
 }
 
@@ -130,9 +131,9 @@ body * {
     font-weight: 800;
     letter-spacing: 3px;
     color: #2b134b;
-    background: #00ff88;
+    background: #fff;
     cursor: pointer;
-    box-shadow: 0px 10px 40px -12px #00ff8052;
+    box-shadow: 0px 10px 40px -12px #ffffff81;
 }
 
 .left-login-image {
