--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,18 @@ footer p {
     font-size:18px;
 }
 
+.hidden {
+    display: none;
+}
+
+
+#clear-posts-button{
+    margin-top: 5px;
+    padding: 5px 10px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
