--- a/css/style.css
+++ b/css/style.css
@@ -483,3 +483,20 @@ footer p {
 .delete-post-button:hover {
     background-color: #0000009c; /* Cor de fundo vermelha mais escura ao passar o mouse */
 }
+
+
+.btn-cadastrar {
+    width: 100%;
+    padding: 16px 0px;
+    margin: 0;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
+    color: rgb(43, 43, 43);
+    background: #fff;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #ffffff2c;
+}
